Enhancements for Spr 2019